# Chattering

./: .gitignore  README.md  pyproject.toml
app/: index.html  style.css  ws.js
client/: __main__.py  chattering.css
notebooks/: 6-knn-voter-classification-2020-hw.ipynb
server/: __main__.py  channel.py  client.py  error.py  message.py  reply.py  request.py  server.py  types.py
